--- a/requirements.txt
+++ b/requirements.txt
@@ -114,3 +114,11 @@ websocket-client==1.5.1
 Werkzeug==2.2.2
 y-py==0.5.9
 ypy-websocket==0.8.2
+Flask==2.1.2
+Flask-CORS==3.0.10
+gunicorn==20.1.0
+
+# Add these lines to update build tools
+pip==24.2
+setuptools>=58.0.0
+wheel>=0.36.2
