--- a/requirements.txt
+++ b/requirements.txt
@@ -118,7 +118,6 @@ Flask==2.1.2
 Flask-CORS==3.0.10
 gunicorn==20.1.0
 
-# Add these lines to update build tools
-pip==24.2
 setuptools>=58.0.0
 wheel>=0.36.2
+pip>=24.2
