--- a/requirements.txt
+++ b/requirements.txt
@@ -121,7 +121,7 @@ gunicorn==20.1.0
 setuptools>=58.0.0
 wheel>=0.36.2
 pip>=24.2
-pandas==1.5.3
-numpy==1.24.3
+pandas>=1.2
+pandas>=1.2
 mysql-connector-python==8.0.31
 
